# context

./: .clinerules  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  DEBUG_AUTO_COMPILE.md  README.md  TESTING_AUTO_COMPILE.md  build-fontc-wasm.sh  directory-access-demo.html  package.sh  release.sh  test-auto-compile.py  update-rust-and-rebuild.sh  update-rust-deps.sh
.github/workflows/: ci.yml  release.yml
babelfont-fontc-build/: Cargo.toml
babelfont-fontc-build/src/: lib.rs
instructions/: UI_ELEMENTS.md  WEBAPP_OVERVIEW.md
test-compiler/: test.sh
webapp/: .prettierrc  coi-serviceworker.js  debug-auto-compile.py  index.html  jest.config.js  manifest.json  package.json  serve-with-cors.py  service-worker.js  test-compile-node.js  test-compile-rayon.html  test-compile-worker.js  test-compile.html  test-simple.html  tsconfig.json  verify-wheel.py  webpack.config.js
webapp/compilation-test/: compile-test.mjs  package.json
webapp/css/: style.css
webapp/examples/: Fustat.glyphs  NestedComponents.babelfont  NestedComponents.glyphs  README.md  ReemKufi.babelfont  ReemKufi.glyphs  compile.js  examples-manifest.json
webapp/js/: ai-assistant.js  auto-compile-manager.js  auto-compile-manager.ts  basictypes.ts  bidi-js.js  bootstrap.ts  cache-manager.js  compile-button.js  example-loader.js  file-browser.js  file-browser.ts  font-compilation.js  font-compilation.ts  font-dropdown.js  font-interpolation.js  font-interpolation.ts  font-manager.js  font-manager.ts  fontc-worker.js  fonteditor.js  glyph-canvas.js  glyph-canvas.ts  index.d.ts  logger.ts  (+19 more)
(+18 files in other folders)
