[package]
name = "babelfont-fontc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
babelfont = { git = "https://github.com/simoncozens/babelfont-rs.git", default-features = false, features = ["fontir"] }
# Use local fontc with rayon completely removed
fontc = { path = "../fontc-no-rayon/fontc" }
fontir = { path = "../fontc-no-rayon/fontir" }
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"
tempfile = "3"
js-sys = "0.3.83"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
