[package]
name = "babelfont-fontc-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
babelfont = { git = "https://github.com/simoncozens/babelfont-rs.git", default-features = false, features = ["fontir"] }
# Use local fontc with rayon completely removed
wasm-bindgen = "0.2"
serde_json = "1.0"
console_error_panic_hook = "0.1"
tempfile = "3"
js-sys = "0.3.83"
# Use the same fontdrasil version as fontc for compatibility
fontdrasil = { git = "https://github.com/googlefonts/fontc", branch = "paths-all-optional" }
write-fonts = "0.44"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
opt-level = "z"
lto = true
